// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders admin event logs view correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Data Tracker Users
      </h3>
      <div
        class="ui basic segment"
      >
        All users registered in the data tracker are available here.
      </div>
      <div
        class="ui basic segment"
      >
        <span
          class="smallLabel"
        >
          Filter by:
        </span>
        <div
          aria-busy="true"
          aria-expanded="false"
          class="ui loading selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            User Role
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Admin
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bix
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Dev
              </span>
            </div>
          </div>
        </div>
        <div
          class="ui divider"
        />
        <div
          class="ui basic very padded segment"
        >
          <div
            class="ui active transition visible inverted dimmer"
            style="display: flex;"
          >
            <div
              class="content"
            >
              <div
                class="ui inverted text loader"
              >
                Loading users...
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders admin event logs view correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/buckets"
              role="option"
            >
              <i
                aria-hidden="true"
                class="trash icon"
              />
              Buckets
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Data Tracker Users
      </h3>
      <div
        class="ui basic segment"
      >
        All users registered in the data tracker are available here.
      </div>
      <div
        class="ui basic segment"
      >
        <span
          class="smallLabel"
        >
          Filter by:
        </span>
        <div
          aria-busy="false"
          aria-expanded="false"
          class="ui selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            User Role
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Admin
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bix
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Dev
              </span>
            </div>
          </div>
        </div>
        <div
          class="ui divider"
        />
        <div
          class="ui very relaxed list"
          role="list"
        >
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Roger Swanson
                <small>
                   - 
                  eric48@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.651Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Justin Heath
                <small>
                   - 
                  dwilliams@yahoo.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.664Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Charles Booker
                <small>
                   - 
                  hlee@tyler-hernandez.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.673Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Steven Morgan
                <small>
                   - 
                  ghutchinson@mcdaniel.net
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.685Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Elizabeth White
                <small>
                   - 
                  hreid@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.697Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Lisa Booker
                <small>
                   - 
                  ethanpalmer@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.713Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Brittany Olsen
                <small>
                   - 
                  mhuang@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.719Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Jeff Salazar
                <small>
                   - 
                  stephaniefuentes@robertson.org
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.725Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Jennifer Cunningham
                <small>
                   - 
                  brenda21@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.732Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Chris Farley
                <small>
                   - 
                  johnwilliams@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.740Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Kelly Blackburn
                <small>
                   - 
                  daniel41@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.746Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Bridget Alvarado
                <small>
                   - 
                  marissa29@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.755Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Kristin Bond
                <small>
                   - 
                  hfreeman@morales.net
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.762Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Kendra Campbell
                <small>
                   - 
                  cjenkins@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.768Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Denise Moore
                <small>
                   - 
                  hayleyfranklin@yahoo.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.775Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Lisa Steele
                <small>
                   - 
                  kevin29@gomez.biz
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.781Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Katrina Torres
                <small>
                   - 
                  yvonne90@reed.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.789Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Frank Johnson
                <small>
                   - 
                  jbyrd@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.796Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Jason Norman
                <small>
                   - 
                  tuckerrebecca@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.802Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                devadmin
                <small>
                   - 
                  admin@myproject.com
                </small>
              </div>
              <div
                class="description"
              >
                ADMIN
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:46.466Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders admin event logs view correctly 3`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/buckets"
              role="option"
            >
              <i
                aria-hidden="true"
                class="trash icon"
              />
              Buckets
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Data Tracker Users
      </h3>
      <div
        class="ui basic segment"
      >
        All users registered in the data tracker are available here.
      </div>
      <div
        class="ui basic segment"
      >
        <span
          class="smallLabel"
        >
          Filter by:
        </span>
        <div
          aria-busy="false"
          aria-expanded="true"
          class="ui active visible selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Admin
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="visible menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Admin
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bix
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Dev
              </span>
            </div>
          </div>
        </div>
        <div
          class="ui divider"
        />
        <div
          class="ui very relaxed list"
          role="list"
        >
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Roger Swanson
                <small>
                   - 
                  eric48@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.651Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Justin Heath
                <small>
                   - 
                  dwilliams@yahoo.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.664Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Charles Booker
                <small>
                   - 
                  hlee@tyler-hernandez.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.673Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Steven Morgan
                <small>
                   - 
                  ghutchinson@mcdaniel.net
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.685Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Elizabeth White
                <small>
                   - 
                  hreid@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.697Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Lisa Booker
                <small>
                   - 
                  ethanpalmer@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.713Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Brittany Olsen
                <small>
                   - 
                  mhuang@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.719Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Jeff Salazar
                <small>
                   - 
                  stephaniefuentes@robertson.org
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.725Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Jennifer Cunningham
                <small>
                   - 
                  brenda21@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.732Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Chris Farley
                <small>
                   - 
                  johnwilliams@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.740Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Kelly Blackburn
                <small>
                   - 
                  daniel41@gmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.746Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Bridget Alvarado
                <small>
                   - 
                  marissa29@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.755Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Kristin Bond
                <small>
                   - 
                  hfreeman@morales.net
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.762Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Kendra Campbell
                <small>
                   - 
                  cjenkins@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.768Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Denise Moore
                <small>
                   - 
                  hayleyfranklin@yahoo.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.775Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Lisa Steele
                <small>
                   - 
                  kevin29@gomez.biz
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.781Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Katrina Torres
                <small>
                   - 
                  yvonne90@reed.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.789Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Frank Johnson
                <small>
                   - 
                  jbyrd@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.796Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                Jason Norman
                <small>
                   - 
                  tuckerrebecca@hotmail.com
                </small>
              </div>
              <div
                class="description"
              >
                Unknown role
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:45.802Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                devadmin
                <small>
                   - 
                  admin@myproject.com
                </small>
              </div>
              <div
                class="description"
              >
                ADMIN
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:46.466Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders admin event logs view correctly 4`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/buckets"
              role="option"
            >
              <i
                aria-hidden="true"
                class="trash icon"
              />
              Buckets
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Data Tracker Users
      </h3>
      <div
        class="ui basic segment"
      >
        All users registered in the data tracker are available here.
      </div>
      <div
        class="ui basic segment"
      >
        <span
          class="smallLabel"
        >
          Filter by:
        </span>
        <div
          aria-busy="false"
          aria-expanded="false"
          class="ui selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="text"
            role="alert"
          >
            Admin
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon clear"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="true"
              aria-selected="true"
              class="active selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Admin
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bix
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Dev
              </span>
            </div>
          </div>
        </div>
        <div
          class="ui divider"
        />
        <div
          class="ui very relaxed list"
          role="list"
        >
          <div
            class="item"
            data-testid="user-item"
            role="listitem"
          >
            <img
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                devadmin
                <small>
                   - 
                  admin@myproject.com
                </small>
              </div>
              <div
                class="description"
              >
                ADMIN
              </div>
            </div>
            <div
              class="right floated content"
            >
              Joined
               
              <time
                datetime="2020-02-07T15:59:46.466Z"
                title="7 Feb 2020"
              >
                10 months from now
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders admin event logs view correctly 5`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/buckets"
              role="option"
            >
              <i
                aria-hidden="true"
                class="trash icon"
              />
              Buckets
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Data Tracker Users
      </h3>
      <div
        class="ui basic segment"
      >
        All users registered in the data tracker are available here.
      </div>
      <div
        class="ui basic segment"
      >
        <span
          class="smallLabel"
        >
          Filter by:
        </span>
        <div
          aria-busy="false"
          aria-expanded="false"
          class="ui selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="text"
            role="alert"
          >
            Bix
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon clear"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Admin
              </span>
            </div>
            <div
              aria-checked="true"
              aria-selected="true"
              class="active selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bix
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Dev
              </span>
            </div>
          </div>
        </div>
        <div
          class="ui divider"
        />
        <p>
          No users data available
        </p>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders admin users view with error message 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/buckets"
              role="option"
            >
              <i
                aria-hidden="true"
                class="trash icon"
              />
              Buckets
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Error
          </div>
          <p>
            Network error: Failed to fetch users information
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
